Ajuste importação e correções

--- a/001_INTRO/PYTHON/001_5_Pandas.ipynb
+++ b/001_INTRO/PYTHON/001_5_Pandas.ipynb
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('../Data/Credit.csv')\n",
+    "data = pd.read_csv('../../Data/Credit.csv')\n",
     "#formato\n",
     "data.shape"
    ]
